novas atualizações em css e html testimonial

--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,8 @@
                            <h2 class="testimonial__title">Camila</h2>
                            <p class="testimonial__description">
                               E um ótmo site para comprar e-books, aqui encontrei
-                              conteudo sobre contabilidade para a minha empresa.
+                              conteudo sobre contabilidade para a minha empresa,
+                              e com um otimo custo-beneficio.
                            </p>
 
                            <div class="testimonial__stars">
@@ -1034,7 +1035,8 @@
                            <h2 class="testimonial__title">Ingride</h2>
                            <p class="testimonial__description">
                               Estava procurando um site para minha empresa
-                              e encontrei o que estava precisando aqui.
+                              e aqui encontrei o que estava precisando e ainda
+                              recebi uma consultoria sobre negocios e empreendedorismo.
                            </p>
 
                            <div class="testimonial__stars">
@@ -1050,8 +1052,8 @@
                            <img src="assets/img/testimonial-perfil-3.png" alt="image" class="testimonial__img">
                            <h2 class="testimonial__title">Pedro</h2>
                            <p class="testimonial__description">
-                              Estava procurando uma Landing page, pra divulgar meus serviços
-                              e encontrei aqui com um otmo desconto.
+                              Estava procurando uma Landing page, pra divulgar meu negocio
+                              e encontrei aqui o que estava procurando e com um otmo desconto.
                            </p>
 
                            <div class="testimonial__stars">
@@ -1084,7 +1086,8 @@
                            <img src="assets/img/testimonial-perfil-5.png" alt="image" class="testimonial__img">
                            <h2 class="testimonial__title">Gabriel</h2>
                            <p class="testimonial__description">
-                              Este site foi um achado, pois aqui encontrei um otimo material para minha empresa,
+                              Este site foi um achado, pois aqui encontrei um otimo
+                              material para minha empresa, com um belo desconto e
                               fui muito bem atendido pelo Igor.
                            </p>
 
@@ -1117,8 +1120,9 @@
                            <img src="assets/img/testimonial-perfil-7.png" alt="image" class="testimonial__img">
                            <h2 class="testimonial__title">Daniel</h2>
                            <p class="testimonial__description">
-                              Trabalho muito bem feito, atendendo todas as minhas expectativas e demandas. Custo-benefício
-                              também foi outro ponto que nos fez escolher a mindshift.
+                              Trabalho muito bem feito, atendendo todas as
+                              minhas expectativas e demandas. Custo-benefício
+                              também foi outro ponto que nos fez diferença.
                            </p>
 
                            <div class="testimonial__stars">
@@ -1134,9 +1138,9 @@
                            <img src="assets/img/testimonial-perfil-8.png" alt="image" class="testimonial__img">
                            <h2 class="testimonial__title">Vanessa</h2>
                            <p class="testimonial__description">
-                              Empresa altamente qualificada com serviços diferenciados
-                              e que agregaram muitíssimo valor para os meus negócios.
-                           </p>
+                              Eu já tinha um site para minha empresa há muito tempo,
+                              porém não era tão profissional como hoje é, no início
+                              fiquei com receio de fazer um site novo.
 
                            <div class="testimonial__stars">
                               <i class="ri-star-fill"></i>
