fim do front-end

--- a/index.html
+++ b/index.html
@@ -143,10 +143,14 @@
                <div class="home__container container grid">
                   <div class="home__data">
                      <h1 class="home__title">
-                        Navegue & <br>
-                        Selecione seu Produto Digital
+                        Navegue &<br>
+                        Selecione seu<br>
+                        Produto Digital
                      </h1>
-                     <h3>Aqui na mindshift temos e-boos | websites | Landing Pages e muito mais</h3>
+                     <h3>
+                     Aqui na mindshift voce encontrará<br>
+                     e-boos | websites | Landing Pages e muito mais
+                     </h3>
                      <p class="home__description">
                         Encontre os Produtos digitais de diferentes temas,
                         explore nosso site em todas as
@@ -1266,7 +1270,7 @@
          </a>
 
          <!--=============== SCROLLREVEAL ===============-->
-         <script src=""></script>
+         <script src="assets/js/scrollreveal.min.js"></script>
 
          <!--=============== SWIPER JS ===============-->
          <script src="assets/js/swiper-bundle.min.js"></script>
