--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
    <html lang="en">
    <head>
       <meta charset="UTF-8">
+
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- <script src="assets/js/jquery-3.7.1.min.js"></script> -->
       <!--=============== FAVICON ===============-->
-      <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+      <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
       <!--=============== REMIXICONS ===============-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css">
