--- a/index.html
+++ b/index.html
@@ -1164,8 +1164,8 @@
                   </a>
 
                   <p class="footer__description">
-                     Você quer entender melhor como cuidar do seu dinheiro, aprender sobre seus direitos e tomar 
-                     decisões mais conscientes no dia a dia? Então conheça a nossa Biblioteca Virtual Gratuita, feita especialmente para ajudar você!
+                     Aqui Você vai entender melhor como cuidar do seu dinheiro, aprender sobre seus direitos e tomar 
+                     decisões mais conscientes no dia a dia.
                   </p>
                </div>
 
